kubernetes/manifests/localstack/localstack-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack-app
  namespace: localstack-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack-app
  template:
    metadata:
      labels:
        app: localstack-app
    spec:
      containers:
      - name: localstack-app
        image: localstack/localstack
        ports:
        - containerPort: 4566
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
