kubernetes/manifests/localstack/localstack-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localstack-service
  namespace: localstack-namespace
spec:
  type: NodePort
  selector:
    app: localstack-app
  ports:
  - port: 4566
    targetPort: 4566
    nodePort: 31566
