kubernetes/manifests/localstack/localstack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localstack-ingress
  namespace: localstack-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "10G"
spec:
  ingressClassName: nginx
  rules:
  - host: aws.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: localstack-service
            port:
              number: 4566
